--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/tasklist?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = mypass
+
+#
+# Show all SQL requests for deploy
+#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
